commit d9ef75bf59a281257161bb543ac3d396d12a0286
Merge: e671f5b aa68df4
Author: Vadim Rovachev <vrovachev@mirantis.com>
Date:   Tue Jun 18 13:25:00 2013 +0400

    merge branch

commit e671f5ba768b90237161d6369c9aa2c721d5593e
Author: Vadim Rovachev <vrovachev@mirantis.com>
Date:   Tue Jun 18 13:23:46 2013 +0400

    add new tests in integration tests

commit aa68df467fea8dc283dcd5b8551fcb46f82ec2ab
Author: Yaroslav Lobankov <ylobankov@mirantis.com>
Date:   Tue Jun 18 13:22:33 2013 +0400

    refactoring code

commit 0a87da00f634c37c07ea6ae0a9e6b767ff6a3fb0
Author: Yaroslav Lobankov <ylobankov@mirantis.com>
Date:   Mon Jun 17 19:57:18 2013 +0400

    added new changes

commit 73a983bc3cf9500d5eeb43234a6a289a32505d8a
Author: Vadim Rovachev <vrovachev@mirantis.com>
Date:   Mon Jun 17 19:44:33 2013 +0400

    added low changes in tests

commit ebee7a8d1deff16fd8ac4dd58b88c62302e974a4
Author: Yaroslav Lobankov <ylobankov@mirantis.com>
Date:   Mon Jun 17 19:28:35 2013 +0400

    new changes

commit dbf447f7ba5dbd2ab19b4d3ceb63563b93dbf130
Merge: 3b4c582 2b9d8d7
Author: Vadim Rovachev <vrovachev@mirantis.com>
Date:   Mon Jun 17 19:17:09 2013 +0400

    merge branch

commit 3b4c582e11e795fbc750b1cc70920d0667f8cfdd
Author: Vadim Rovachev <vrovachev@mirantis.com>
Date:   Mon Jun 17 19:16:07 2013 +0400

    add config.py in gitignore

commit 2b9d8d7fd8ab785ffd835fa87e6817eba4921097
Author: Yaroslav Lobankov <ylobankov@mirantis.com>
Date:   Mon Jun 17 19:12:05 2013 +0400

    pass run_fast_checks

commit b493fe83bc3a83e1fb257df4695bb7d6b9e84952
Author: Yaroslav Lobankov <ylobankov@mirantis.com>
Date:   Mon Jun 17 18:30:17 2013 +0400

    rename classnames

commit f510c8761ae92b5f2ac31e26d974ad4436257eb6
Author: Vadim Rovachev <vrovachev@mirantis.com>
Date:   Mon Jun 17 17:02:31 2013 +0400

    fix tests for crud clusters from cluster template vol.2

commit 95487eeeaa73a7786e2df567b8804480a86bcd19
Author: Vadim Rovachev <vrovachev@mirantis.com>